test/assets/invalid/signatures/expect-atomic.hs
a :: Maybe Int
a = 1